--- a/control-monad-failure.cabal
+++ b/control-monad-failure.cabal
@@ -18,7 +18,7 @@ Flag extensibleExceptionsInBase
 
 Library
   buildable: True
-  build-depends: base, pretty
+  build-depends: base, pretty, template-haskell
 
   if flag(transformers)
      build-depends: transformers
