provide optional instances for mtl
After discussion with Nicolas Pouillard and snoyberg,
we decide that c-m-f should provide obligatory
transformers instances and optional mtl instances

--- a/control-monad-failure.cabal
+++ b/control-monad-failure.cabal
@@ -11,6 +11,9 @@ synopsis: A class for monads which can fail with an error.
 category: Control, Monads
 stability: experimental
 
+Flag mtl
+  default: True
+
 Library
   buildable: True
   build-depends: base >= 4 && < 5, pretty, template-haskell, transformers
@@ -18,3 +21,9 @@ Library
   extensions:  MultiParamTypeClasses, FlexibleInstances
   exposed-modules:
      Control.Monad.Failure
+     Control.Monad.Failure.Class
+     Control.Monad.Failure.Transformers
+  if flag(mtl)
+    cpp-options: -DMTL
+    build-depends: mtl
+    exposed-modules: Control.Monad.Failure.Mtl
