--- a/control-monad-failure.cabal
+++ b/control-monad-failure.cabal
@@ -16,7 +16,7 @@ Flag mtl
 
 Library
   buildable: True
-  build-depends: base >= 4 && < 5, pretty, template-haskell, transformers
+  build-depends: base >= 4 && < 5, transformers
 
   extensions:  MultiParamTypeClasses, FlexibleInstances
   exposed-modules:
