really rename Mtl to MTL

--- a/control-monad-failure.cabal
+++ b/control-monad-failure.cabal
@@ -26,7 +26,7 @@ Library
   if flag(mtl)
     cpp-options: -DMTL
     build-depends: mtl
-    exposed-modules: Control.Monad.Failure.Mtl
+    exposed-modules: Control.Monad.Failure.MTL
 
 source-repository head
   type:     git
